--- a/answers.yml
+++ b/answers.yml
@@ -1,10 +1,10 @@
-answer-1: 
-answer-2: 
-answer-3: 
-answer-4: 
-answer-5: 0
-answer-6: 0
-answer-7: 
-answer-8: 
-answer-9: 
-answer-10: 
+answer-1: North_Dakota
+answer-2: 4
+answer-3: 438
+answer-4: 250
+answer-5: 50
+answer-6: 21
+answer-7: 249213345
+answer-8: 25
+answer-9: 3325
+answer-10: chr4
